<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Activity Labels -->
    <string name="app_name">ULed</string>
    <string name="activity_device_setting_label">Device Setting</string>
    <string name="activity_device_scanning_label">Device Scanning</string>
    <string name="activity_device_grouping">Device Grouping</string>
    <string name="activity_group_setting">Group Setting</string>
    <string name="activity_mesh_add_lable">Add Mesh</string>

    <!-- Bottom Nav -->
    <string name="header_devices">Lights</string>
    <string name="header_groups">Groups</string>
    <string name="header_account">Me</string>

    <!-- DeviceSchema List -->
    <string name="device_list_header">Lights</string>
    <string name="device_list_menu_left">Meshs</string>
    <string name="device_list_all_on">All On</string>
    <string name="device_list_all_off">All Off</string>
    <string name="device_list_Scene">Ota</string>
    <string name="device_list_Scene_night">Night Scene</string>
    <string name="device_list_Scene_sleep">Sleep Scene</string>

    <!-- DeviceSchema Setting -->
    <string name="device_setting_header">Light Setting</string>
    <string name="device_setting_brightness">Brightness</string>
    <string name="device_setting_color">Color</string>
    <string name="device_setting_temperature">Color Temperature</string>
    <string name="device_setting_music">Music</string>
    <string name="device_setting_sound">Playing by heart</string>
    <string name="device_setting_remove_device">Remove Device</string>

    <!-- DeviceSchema Grouping -->
    <string name="device_grouping_header">Grouping</string>

    <!-- Scan DeviceSchema -->
    <string name="device_scan_header">Network Scanning</string>
    <string name="device_scan_scan">Scan Device</string>
    <string name="device_scan_add">Add Device</string>

    <!-- GroupSchema List -->
    <string name="group_list_header">Groups</string>
    <string name="group_list_on">On</string>
    <string name="group_list_off">Off</string>

    <!-- GroupSchema Setting -->
    <string name="group_setting_header">Group Setting</string>

    <!-- MeshSchema Add -->
    <string name="mesh_add_header">Add Mesh</string>
    <string name="mesh_add_label_mesh_setting">Mesh Setting</string>
    <string name="mesh_add_label_factory_setting">Factory Default Setting</string>
    <string name="mesh_add_button_save">Save</string>
    <string name="mesh_add_button_share">Share</string>
    <string name="mesh_add_button_clear">Clear Mesh</string>
    <string name="mesh_add_default_factory_name">telink_mesh1</string>
    <string name="mesh_add_default_factory_password">123</string>
    <string name="mesh_add_mesh_name">Default Mesh Name</string>
    <string name="mesh_add_mesh_password">Default Mesh Password</string>
    <string name="mesh_add_factory_mesh_name">Factory Mesh Name</string>
    <string name="mesh_add_factory_mesh_password">Factory Mesh Password</string>

    <string name="title_activity_group_setting">GroupSettingActivity</string>
    <string name="title_activity_test">TestActivity</string>

    <string name="select_file">Select file(%s)</string>
    <string name="ota_prepare_title">OTA Prepare</string>
    <string name="ota_update_title">OTA Processing</string>
    <string name="progress_ota">OTA Progress: %s </string>
    <string name="progress_mesh_ota">MeshOTA Progress: %s</string>
    <string name="target_version">Target Version : %s</string>
    <string name="scan_tip">Scanning lights need related permissions, otherwise it can not proceed to the next step</string>
    <string name="btn_ok">OK</string>
    <string name="btn_cancel">Cancel</string>
    <string name="add_groups">Add a group</string>
    <string name="loading">Scanning...</string>
    <string name="scan_end">The scan was completed and no equipment was found!</string>
    <string name="device_login_tip">Logging, please wait!</string>
    <string name="grouping_completed">Grouping completed</string>
    <string name="allLight">All Lights</string>
    <string name="group">Group</string>
    <string name="openBluetooth">open Bluetooth, Play the smart light!</string>
    <string name="quite">Quite</string>
    <string name="retry">Retry</string>
    <string name="light">Lights</string>
    <string name="me">Me</string>
    <string name="fragment_name_me">me</string>
    <string name="grouping_wait_tip">Grouping information is being configured. Please wait!</string>
    <string name="rescan">Rescan</string>
    <string name="start_group_bt">Start grouping</string>
    <string name="group_completed">Grouping is complete!</string>
    <string name="have_lamp_no_group_tip">There are no lights grouping, please complete the grouping operation</string>
    <string name="sure_group">Determine the group</string>
    <string name="selected_lamp_tip">Please select at least one light!</string>
    <string name="select_group_tip">Please select at least one group</string>
    <string name="much_lamp_tip">Supports up to 256 lights</string>
    <string name="restart_bluetooth">Restart Bluetooth to better experience smart lights!</string>
    <string name="chear_cache">Empty the cache</string>
    <string name="update_ite">Sync ITE</string>
    <string name="clean_tip">Cache empty, App Reboot soon</string>
    <string name="wait_develop">To be developed</string>

</resources>